--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -25,11 +25,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #2DE2E6;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #2d2fb6;
 }
 
 body {
